--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blooming Flowers</title>
-
+    <!-- Vercel Analytics -->
+    <script defer src="/_vercel/analytics/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -2182,4 +2183,5 @@ void main(){ mainImage(fragColor, gl_FragCoord.xy); }
     </script>
   </body>
 </html>
+
 
